# serializer version: 1
# name: TestGroupsQueryRunner.test_groups_query_runner
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0))
  ORDER BY toTimeZone(groups.created_at, 'UTC') DESC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner_with_offset
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0))
  ORDER BY toTimeZone(groups.created_at, 'UTC') DESC
  LIMIT 11
  OFFSET 2 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner_with_order_by
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key,
         replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'arr'), ''), 'null'), '^"|"$', '') AS arr
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0))
  ORDER BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'arr'), ''), 'null'), '^"|"$', '') DESC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner_with_order_by.1
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key,
         replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'arr'), ''), 'null'), '^"|"$', '') AS arr
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0))
  ORDER BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'arr'), ''), 'null'), '^"|"$', '') ASC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner_with_order_by.2
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0))
  ORDER BY coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key) DESC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner_with_property_columns
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key,
         replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'arr'), ''), 'null'), '^"|"$', '') AS arr
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0))
  ORDER BY toTimeZone(groups.created_at, 'UTC') DESC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner_with_search
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0), or(ifNull(ilike(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), '%org2%'), 0), ilike(toString(groups.group_key), '%org2%')))
  ORDER BY toTimeZone(groups.created_at, 'UTC') DESC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner_with_string_property
  '''
  SELECT coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), groups.group_key),
         groups.group_key AS key
  FROM groups
  WHERE and(equals(groups.team_id, 99999), equals(groups.group_type_index, 0), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', ''), 'org0.inc'), 0))
  ORDER BY toTimeZone(groups.created_at, 'UTC') DESC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
